novo curso adicionado

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<li>Curso de Design</li>
 		<li>Curso de Ilustracao</li>
 		<li>Curso de Infra</li>
+		<li>Curso de Integracao</li>
 	</ul>
 
 </body>
