renomeando nome do curso

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<li>Curso de Design</li>
 		<li>Curso de Ilustracao</li>
 		<li>Curso de Infra</li>
-		<li>Curso de Integracao</li>
+		<li>Curso de Integracao continua: maturidade e produtividade no desenvolvimento de programas</li>
 	</ul>
 
 </body>
