--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Aprendendo Git</title>
+	<link rel="stylesheet" href="estilo.css">
 </head>
 <body>
 	<h1>HTML simples para git</h1>
